Revert "Completed 1.8-1.18 support and added customization features."
This reverts commit 58f344bef37d71b360be3753008327ecc588415f.